# cvpy-toolkit

./: pyproject.toml
cvpy/cvw/: _cv2_wrapper.py  cv2_wrapper.py  image_clicker.py
cvpy/cvw/viewer/: _image_key_binder.py
cvpy/imseg/: __init__.py  bbox.py  contour.py
cvpy/imseg/immasks/: __init__.py  mask_utils.py  masks.py
cvpy/io/: image_generators.py  imh5.py
