[project]
name = "cvpy-toolkit"
version = "0.1.4"
authors = [
    {name="Josh Fisher", email="joshfisher81@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
    "pdoc>=14.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cvpy"]

[[tool.uv.index]]
url = "http://10.10.100.42:9791/"
default = true
